--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,22 +14,21 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <activity
             android:name=".Login"
             android:label="@string/title_activity_login" >
         </activity>
-
+        <activity android:name=".Main_activity" >
+        </activity>
         <activity
-            android:name=".MainActivity"
-            android:label="HI" >
+            android:name=".RaymondTestAct"
+            android:label="@string/title_activity_raymond_test" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".Main_activity" />
     </application>
 
 </manifest>
