--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
 
     <application
@@ -28,6 +28,7 @@
         </activity>
         <activity
             android:name=".RaymondTest"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_raymond_test" >
         </activity>
         <activity
