--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity android:name=".Main_activity" >
         </activity>
+        <activity android:name=".Timer_activity" />
         <activity
             android:name=".A_main"
             android:label="@string/title_activity_raymond_test"
