--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:name=".Login"
             android:label="@string/title_activity_login" >
         </activity>
-        <activity android:name=".Timer_activity" />
+        <activity android:name=".Timer_Fragment" />
         <activity
             android:name=".A_main"
             android:label="@string/title_activity_raymond_test"
