--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
-
+    <uses-feature android:name="android.hardware.camera" android:required="true"/> `
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,11 +19,9 @@
             android:name=".Login"
             android:label="@string/title_activity_login" >
         </activity>
-        <activity android:name=".Main_activity" >
-        </activity>
         <activity android:name=".Timer_activity" />
         <activity
-            android:name=".A_main"
+            android:name=".A_Entry"
             android:label="@string/title_activity_raymond_test"
             android:screenOrientation="portrait" >
         </activity>
