--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-feature android:name="android.hardware.camera" android:required="true"/> `
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+ `
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,21 +22,18 @@
         <activity
             android:name=".Login"
             android:label="@string/title_activity_login" >
-        </activity>
-        <activity
-            android:name=".A_Entry"
-            android:label="@string/title_activity_raymond_test"
-            android:screenOrientation="portrait" >
-        </activity>
-        <activity
-            android:name=".InitComponent"
-            android:label="@string/title_activity_init_component" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".A_Entry"
+            android:label="@string/title_activity_raymond_test"
+            android:screenOrientation="portrait" >
+        </activity>
+
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -40,6 +41,7 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
 
     </application>
 
